--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ matplotlib==3.9.0
 seaborn==0.13.2
 pillow==10.3.0
 adjustText==1.1.1
-igraph==0.11.5
-leidenalg==0.10
+igraph #==0.11.5
+leidenalg #==0.10.2
